<resources>

    <string name="app_name">FutureStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer">Open drawer</string>
    <string name="Close_drawer">Close drawer</string>
    <string name="CPU">CPU</string>
    <string name="GPU">GPU</string>
    <string name="motherboard">Motherboard</string>
    <string name="cases">Cases</string>
    <string name="sound_card">Sound card</string>
    <string name="hard_disk">Hard disk</string>
    <string name="air_cooling">Air cooler</string>
    <string name="water_cooling">Water cooler</string>
    <string name="ram">RAM</string>
    <string name="headphone">Headphone</string>
    <string name="computer">Computer</string>
    <string name="laptop">Laptop</string>
    <string name="console">Console</string>
    <string name="programs_and_games">Programs and games</string>
    <string name="buy_and_sale_account">account buying and selling</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="welcome">Welcome</string>
    <string name="Login">Sign in</string>
    <string name="the_data_was_updated_successfully">Data is updated successfully</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sign_out_successful">You signed out successfully.</string>
    <string name="send_please_check_your_email">The link is Sent. Please check your email.</string>
    <string name="fill_your_data">Please fill your data.</string>
    <string name="sign_in_successful">You sign in successfully. Welcome</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="you_must_accept_the_privacy">You must accept the privacy and terms of use</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="update_data">update data</string>
    <string name="reset_password">Reset password</string>
    <string name="price">Price:</string>
    <string name="password">Password</string>
    <string name="forget_my_password">Forget my password</string>
    <string name="don_t_have_an_account_registration">Don\'t have an account? Sign up here! </string>
    <string name="login">login</string>
    <string name="phone_number_9665123456789">Phone number: 9665123456789</string>
    <string name="confirm_password">Confirm password</string>
    <string name="privacy">Privacy</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="registreation">Registration</string>
    <string name="desktop">Desktop</string>
    <string name="special_offer">Special offers</string>
    <string name="personal_data">Personal data</string>
    <string name="last_orders">Last orders</string>
    <string name="return_and_warranty">Return And Warranty</string>
    <string name="addresses">Addresses</string>
    <string name="seller_account">Seller account</string>
    <string name="type_your_message_here">Type your message here</string>
    <!--    Done translate until here-->

</resources>
