<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Default_white"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView162"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/signup_header"
        app:layout_constraintBottom_toTopOf="@+id/guideline1262"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1262"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1362"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/textView2265223"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Sign up"
        android:textColor="@color/Default_font_color_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1362"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/white_page3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/signup_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1362"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/signup_activity_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/Default5"
        android:textColorHint="@color/Default3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView162" />

    <EditText
        android:id="@+id/signup_activitty_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/Default5"
        android:textColorHint="@color/Default3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_activity_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/signup_activity_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_name_edit_text" />

    <EditText
        android:id="@+id/signup_activity_phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:hint="@string/phone_number_9665123456789"
        android:inputType="phone"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/Default5"
        android:textColorHint="@color/Default3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_activitty_email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/signup_activitty_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_activitty_email_edit_text" />

    <EditText
        android:id="@+id/signup_activity_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/Default5"
        android:textColorHint="@color/Default3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_activitty_email_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_activitty_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_phone_number_edit_text" />

    <EditText
        android:id="@+id/signup_activity_confirm_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/Default5"
        android:textColorHint="@color/Default3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_activity_password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/signup_activity_password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_password_edit_text" />

    <com.rey.material.widget.CheckBox
        android:id="@+id/signup_activity_privacy_check_box"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/signup_activity_confirm_password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_confirm_password_edit_text" />

    <Button
        android:id="@+id/reset_password_activity_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_button"
        android:text="@string/registreation"
        android:textColor="@color/Default_font_color_light"
        app:layout_constraintEnd_toEndOf="@+id/signup_activity_confirm_password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/signup_activity_confirm_password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_activity_privacy_check_box" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/Default_font_color_dark"
        app:layout_constraintBottom_toBottomOf="@+id/signup_activity_privacy_check_box"
        app:layout_constraintStart_toEndOf="@+id/signup_activity_privacy_check_box"
        app:layout_constraintTop_toTopOf="@+id/signup_activity_privacy_check_box" />

    <TextView
        android:id="@+id/signup_activity_goto_signin_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account_login"
        android:textAlignment="center"
        android:textColor="@color/Default5"
        app:layout_constraintEnd_toEndOf="@+id/reset_password_activity_button"
        app:layout_constraintStart_toStartOf="@+id/reset_password_activity_button"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_activity_button" />

</androidx.constraintlayout.widget.ConstraintLayout>