<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Default_background"
    tools:context=".PersonalDataActivity">

    <EditText
        android:id="@+id/personal_data_activity_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textColor="@color/Default_font_color_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/personal_data_activity_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/personal_data_activity_name_edit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/Default_font_color_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/personal_data_activity_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/personal_data_activity_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/personal_data_activity_name_edit_text" />

    <EditText
        android:id="@+id/personal_data_activity_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/phone_number"
        android:textAlignment="textStart"
        android:textColor="@color/Default_font_color_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/personal_data_activity_email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/personal_data_activity_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/personal_data_activity_email_edit_text" />

    <EditText
        android:id="@+id/personal_data_activity_phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_edit_text"
        android:ems="10"
        android:inputType="phone"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/personal_data_activity_email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/personal_data_activity_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <Button
        android:id="@+id/personal_data_activity_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/default_button"
        android:text="@string/update_data"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/personal_data_activity_phone_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/personal_data_activity_phone_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/personal_data_activity_phone_number_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>